--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
         <li><a href="#">Om företag</a></li>
       </ul>
     </nav>
+    <div>
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+      <img src="" alt="" />
+    </div>
     <script src="funky.js"></script>
   </body>
 </html>
