--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="stylesheet.css" />
+    <script defer src="funky.js"></script>
   </head>
   <body>
     <header>
@@ -23,7 +24,7 @@
         </div>
       </div>
     </header>
-    <nav>
+    <nav class="ognav">
       <ul class="directory">
         <li><a href="#">TV, Media och Kameror</a></li>
         <li><a href="#">Datorkomponenter</a></li>
@@ -31,17 +32,5 @@
         <li><a href="#">Om företag</a></li>
       </ul>
     </nav>
-    <div>
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-      <img src="" alt="" />
-    </div>
-    <script src="funky.js"></script>
   </body>
 </html>
