promoted options on main page

--- a/index.html
+++ b/index.html
@@ -32,5 +32,47 @@
         <li><a href="#">Om företag</a></li>
       </ul>
     </nav>
+    <div class="mainbody">
+      <img
+        class="philips-tv"
+        src="/items/Philips-70PUS8505.jpg"
+        alt="philips-tv"
+      />
+      <img class="asus" src="/items/asus.jpg" alt="gtx 3080" />
+      <img
+        class="bose"
+        src="/items/Bose-QuietComfort-white.jpg"
+        alt="BoseHeadphones"
+      />
+      <img
+        class="sony"
+        src="/items/Sony-Alpha-A7-III.jpg"
+        alt="Sony-Alpha-A7-III"
+      />
+      <img
+        class="huawei"
+        src="/items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
+        alt="Huawei MateBook"
+      />
+      <img class="logitech" src="/items/logitechmxmaster.jpg" alt="mxmaster" />
+      <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
+      <img
+        class="fractal"
+        src="/items/Fractal-Design-MeshifyC.jpg"
+        alt="fractacldesign"
+      />
+      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
+      <a class="asus-text" href="#">Asus Geforce RTX 3080 10GB | 9 199kr</a>
+      <a class="bose-text" href="#"
+        >Bose QuietComfort Silver Edition | 2 399kr</a
+      >
+      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
+      <a class="huawei-text" href="#">Huawei MateBook D14 512GB | 6 990kr</a>
+      <a class="mxmaster-text" href="#">Logitech MX Master 2S | 699kr</a>
+      <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
+      <a class="gopro-text" href="#">GoPro Hero 8 Black | 4 990kr</a>
+      <a class="fractal-text" href="#">Fractal Design Meshify C | 990kr</a>
+    </div>
   </body>
 </html>
