fixade problem med att adda och remova grejer från grid. (värsta möjliga lösningen)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="stylesheet.css" />
     <script defer src="funky.js"></script>
   </head>
@@ -32,6 +36,7 @@
         <li><a href="#">Om företag</a></li>
       </ul>
     </nav>
+    <!--Första main bodyn för den största typen av skärm-->
     <div class="mainbody">
       <img
         class="philips-tv"
@@ -73,6 +78,53 @@
       <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
       <a class="gopro-text" href="#">GoPro Hero 8 Black | 4 990kr</a>
       <a class="fractal-text" href="#">Fractal Design Meshify C | 990kr</a>
+    </div>
+    <!--Andra main bodyn för medelstora skärmar-->
+    <div class="mainbody2">
+      <img
+        class="philips-tv"
+        src="/items/Philips-70PUS8505.jpg"
+        alt="philips-tv"
+      />
+      <img class="asus" src="/items/asus.jpg" alt="gtx 3080" />
+      <img
+        class="sony"
+        src="/items/Sony-Alpha-A7-III.jpg"
+        alt="Sony-Alpha-A7-III"
+      />
+      <img
+        class="huawei"
+        src="/items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
+        alt="Huawei MateBook"
+      />
+      <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
+      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
+      <a class="asus-text" href="#">Asus Geforce RTX 3080 10GB | 9 199kr</a>
+      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
+      <a class="huawei-text" href="#">Huawei MateBook D14 512GB | 6 990kr</a>
+      <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
+      <a class="gopro-text" href="#">GoPro Hero 8 Black | 4 990kr</a>
+    </div>
+    <!--tredje main bodyn för de minsta skärmarna-->
+    <div class="mainbody3">
+      <img
+        class="philips-tv"
+        src="/items/Philips-70PUS8505.jpg"
+        alt="philips-tv"
+      />
+      <img
+        class="sony"
+        src="/items/Sony-Alpha-A7-III.jpg"
+        alt="Sony-Alpha-A7-III"
+      />
+      <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
+      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
+      <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
+    </div>
+    <div>
+      <footer></footer>
     </div>
   </body>
 </html>
