--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <nav class="ognav">
       <ul class="directory">
-        <li><a href="#">TV, Media och Kameror</a></li>
+        <li><a href="tvmediakamera.html">TV, Media och Kameror</a></li>
         <li><a href="#">Datorkomponenter</a></li>
         <li><a href="#">Datorer och Tillbehör</a></li>
         <li><a href="#">Om företag</a></li>
@@ -123,8 +123,13 @@
       <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
       <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
     </div>
-    <div>
-      <footer></footer>
+    <div class="fotterholder">
+      <footer class="fotterbody">
+        <ul class="fotterul">
+          <li class="vårcopy">Detta är våran copywrite</li>
+          <li class="japp">Japp detta är allt</li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
