--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="title">
-        <h3>E-Comp</h3>
+        <h3><a href="index.html">E-Comp</a></h3>
       </div>
       <div class="burgerwrap">
         <div class="burger">
@@ -31,9 +31,9 @@
     <nav class="ognav">
       <ul class="directory">
         <li><a href="tvmediakamera.html">TV, Media och Kameror</a></li>
-        <li><a href="#">Datorkomponenter</a></li>
-        <li><a href="#">Datorer och Tillbehör</a></li>
-        <li><a href="#">Om företag</a></li>
+        <li><a href="datorkomponenter.html">Datorkomponenter</a></li>
+        <li><a href="datorertillbehör.html">Datorer och Tillbehör</a></li>
+        <li><a href="omoss.html">Om företag</a></li>
       </ul>
     </nav>
     <!--Första main bodyn för den största typen av skärm-->
@@ -67,17 +67,49 @@
         src="/items/Fractal-Design-MeshifyC.jpg"
         alt="fractacldesign"
       />
-      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
-      <a class="asus-text" href="#">Asus Geforce RTX 3080 10GB | 9 199kr</a>
-      <a class="bose-text" href="#"
-        >Bose QuietComfort Silver Edition | 2 399kr</a
+      <a
+        class="philips-text"
+        href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
+        >Philips-70PUS8505 TV | 15 027kr</a
       >
-      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
-      <a class="huawei-text" href="#">Huawei MateBook D14 512GB | 6 990kr</a>
-      <a class="mxmaster-text" href="#">Logitech MX Master 2S | 699kr</a>
-      <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
-      <a class="gopro-text" href="#">GoPro Hero 8 Black | 4 990kr</a>
-      <a class="fractal-text" href="#">Fractal Design Meshify C | 990kr</a>
+      <a
+        class="asus-text"
+        href="https://www.webhallen.com/se/product/324062-ASUS-TUF-GeForce-RTX-3080-10GB-Gaming-OC?ref=Prisjakt"
+        >Asus Geforce RTX 3080 10GB | 9 390kr</a
+      >
+      <a
+        class="bose-text"
+        href="https://www.webhallen.com/se/product/275494-Bose-QuietComfort-35-II-Silver?ref=Prisjakt"
+        >Bose QuietComfort Silver Edition | 2 190kr</a
+      >
+      <a class="sony-text" href="https://www.andrashoppen.se/sony-a7-mark-iii"
+        >Sony Alpha A7 III | 21 990kr</a
+      >
+      <a
+        class="huawei-text"
+        href="https://www.inet.se/produkt/1964527/huawei-matebook-d-14-ryzen-5-8gb-512gb?utm_source=prisjakt&utm_medium=cpc&utm_campaign=prisjakt"
+        >Huawei MateBook D14 512GB | 6 990kr</a
+      >
+      <a
+        class="mxmaster-text"
+        href="https://www.elgiganten.se/product/datorer-tillbehor/mus-och-tangentbord/LTMXMAS2SLG/logitech-mx-master-2s-tradlos-mus-ljusgra?utm_source=prisjakt&utm_medium=pricecomparison&utm_campaign=prisjakt-listing-5"
+        >Logitech MX Master 2S | 699kr</a
+      >
+      <a
+        class="ryzen-text"
+        href="https://www.netonnet.se/art/datorkomponenter/processor/amdsocketam4/amd-ryzen-9-5900x-3-7-ghz/1015002.13677/?utm_source=prisjakt.nu&utm_medium=cpc&utm_campaign=prospecting_conversion_prisjakt-prisjamforelse_se"
+        >AMD Ryzen 9 5900X | 6 089kr</a
+      >
+      <a
+        class="gopro-text"
+        href="https://www.andrashoppen.se/gopro-hero-8-black"
+        >GoPro Hero 8 Black | 3 690kr</a
+      >
+      <a
+        class="fractal-text"
+        href="https://www.komplett.se/product/930968/datorutrustning/datorkomponenter/chassibarebone/midi-tower/fractal-design-meshify-c-temp-g"
+        >Fractal Design Meshify C | 799kr</a
+      >
     </div>
     <!--Andra main bodyn för medelstora skärmar-->
     <div class="mainbody2">
@@ -99,12 +131,34 @@
       />
       <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
       <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
-      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
-      <a class="asus-text" href="#">Asus Geforce RTX 3080 10GB | 9 199kr</a>
-      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
-      <a class="huawei-text" href="#">Huawei MateBook D14 512GB | 6 990kr</a>
-      <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
-      <a class="gopro-text" href="#">GoPro Hero 8 Black | 4 990kr</a>
+      <a
+        class="philips-text"
+        href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
+        >Philips-70PUS8505 TV | 8 899kr</a
+      >
+      <a
+        class="asus-text"
+        href="https://www.webhallen.com/se/product/324062-ASUS-TUF-GeForce-RTX-3080-10GB-Gaming-OC?ref=Prisjakt"
+        >Asus Geforce RTX 3080 10GB | 9 390kr</a
+      >
+      <a class="sony-text" href="https://www.andrashoppen.se/sony-a7-mark-iii"
+        >Sony Alpha A7 III | 21 990kr</a
+      >
+      <a
+        class="huawei-text"
+        href="https://www.inet.se/produkt/1964527/huawei-matebook-d-14-ryzen-5-8gb-512gb?utm_source=prisjakt&utm_medium=cpc&utm_campaign=prisjakt"
+        >Huawei MateBook D14 512GB | 6 990kr</a
+      >
+      <a
+        class="ryzen-text"
+        href="https://www.netonnet.se/art/datorkomponenter/processor/amdsocketam4/amd-ryzen-9-5900x-3-7-ghz/1015002.13677/?utm_source=prisjakt.nu&utm_medium=cpc&utm_campaign=prospecting_conversion_prisjakt-prisjamforelse_se"
+        >AMD Ryzen 9 5900X | 6 089kr</a
+      >
+      <a
+        class="gopro-text"
+        href="https://www.andrashoppen.se/gopro-hero-8-black"
+        >GoPro Hero 8 Black | 3 690kr</a
+      >
     </div>
     <!--tredje main bodyn för de minsta skärmarna-->
     <div class="mainbody3">
@@ -119,9 +173,19 @@
         alt="Sony-Alpha-A7-III"
       />
       <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
-      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
-      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
-      <a class="ryzen-text" href="#">AMD Ryzen 9 5900X | 5 990kr</a>
+      <a
+        class="philips-text"
+        href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
+        >Philips-70PUS8505 TV | 8 899kr</a
+      >
+      <a class="sony-text" href="https://www.andrashoppen.se/sony-a7-mark-iii"
+        >Sony Alpha A7 III | 21 990kr</a
+      >
+      <a
+        class="ryzen-text"
+        href="https://www.netonnet.se/art/datorkomponenter/processor/amdsocketam4/amd-ryzen-9-5900x-3-7-ghz/1015002.13677/?utm_source=prisjakt.nu&utm_medium=cpc&utm_campaign=prospecting_conversion_prisjakt-prisjamforelse_se"
+        >AMD Ryzen 9 5900X | 6 089kr</a
+      >
     </div>
     <div class="fotterholder">
       <footer class="fotterbody">
