--- a/tvmediakamera.html
+++ b/tvmediakamera.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="title">
-        <h3>E-Comp</h3>
+        <h3><a href="index.html">E-Comp</a></h3>
       </div>
       <div class="burgerwrap">
         <div class="burger">
@@ -34,35 +34,54 @@
         <li class="tvmediakamera">
           <a href="tvmediakamera.html">TV, Media och Kameror</a>
         </li>
-        <li><a href="#">Datorkomponenter</a></li>
-        <li><a href="#">Datorer och Tillbehör</a></li>
-        <li><a href="#">Om företag</a></li>
+        <li><a href="datorkomponenter.html">Datorkomponenter</a></li>
+        <li><a href="datorertillbehör.html">Datorer och Tillbehör</a></li>
+        <li><a href="omoss.html">Om företag</a></li>
       </ul>
     </nav>
-    <!--Första main bodyn för den största typen av skärm-->
-    <div class="mainbody">
+    <div class="mainbody4">
       <img
-        class="philips-tv"
+        class="philips-tv2"
         src="/items/Philips-70PUS8505.jpg"
         alt="philips-tv"
       />
       <img
-        class="bose"
+        class="bose2"
         src="/items/Bose-QuietComfort-white.jpg"
         alt="BoseHeadphones"
       />
       <img
-        class="sony"
+        class="sony2"
         src="/items/Sony-Alpha-A7-III.jpg"
         alt="Sony-Alpha-A7-III"
       />
-      <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
-      <a class="philips-text" href="#">Philips-70PUS8505 TV | 8 899kr</a>
-      <a class="bose-text" href="#"
+      <img class="gopro2" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
+      <a
+        class="philips-text2"
+        href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
+        >Philips-70PUS8505 TV | 8 899kr</a
+      >
+      <a
+        class="bose-text2"
+        href="https://www.webhallen.com/se/product/275494-Bose-QuietComfort-35-II-Silver?ref=Prisjakt"
         >Bose QuietComfort Silver Edition | 2 399kr</a
       >
-      <a class="sony-text" href="#">Sony Alpha A7 III | 19 999kr</a>
-      <a class="gopro-text" href="#">GoPro Hero 8 Black | 4 990kr</a>
+      <a class="sony-text2" href="https://www.andrashoppen.se/sony-a7-mark-iii"
+        >Sony Alpha A7 III | 19 999kr</a
+      >
+      <a
+        class="gopro-text2"
+        href="https://www.andrashoppen.se/gopro-hero-8-black"
+        >GoPro Hero 8 Black | 4 990kr</a
+      >
+    </div>
+    <div class="fotterholder">
+      <footer class="fotterbody">
+        <ul class="fotterul">
+          <li class="vårcopy">Detta är våran copywrite</li>
+          <li class="japp">Japp detta är allt</li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
