--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         src="/items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
         alt="Huawei MateBook"
       />
-      <img class="logitech" src="/items/logitechmxmaster.jpg" alt="mxmaster" />
+      <img class="logitech" src="items/logitechmxmaster.jpg" alt="mxmaster" />
       <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
       <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
       <img
