--- a/datorertillbehör.html
+++ b/datorertillbehör.html
@@ -44,10 +44,10 @@
     <div class="mainbody6">
       <img
         class="huawei4"
-        src="/items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
+        src="items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
         alt="Huawei MateBook"
       />
-      <img class="logitech4" src="/items/logitechmxmaster.jpg" alt="mxmaster" />
+      <img class="logitech4" src="items/logitechmxmaster.jpg" alt="mxmaster" />
       <a
         class="huawei-text4"
         href="https://www.inet.se/produkt/1964527/huawei-matebook-d-14-ryzen-5-8gb-512gb?utm_source=prisjakt&utm_medium=cpc&utm_campaign=prisjakt"
