--- a/datorkomponenter.html
+++ b/datorkomponenter.html
@@ -40,11 +40,11 @@
       </ul>
     </nav>
     <div class="mainbody5">
-      <img class="asus3" src="/items/asus.jpg" alt="gtx 3080" />
-      <img class="ryzen3" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <img class="asus3" src="items/asus.jpg" alt="gtx 3080" />
+      <img class="ryzen3" src="items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
       <img
         class="fractal3"
-        src="/items/Fractal-Design-MeshifyC.jpg"
+        src="items/Fractal-Design-MeshifyC.jpg"
         alt="fractacldesign"
       />
       <a
