--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
     <div class="mainbody">
       <img
         class="philips-tv"
-        src="/items/Philips-70PUS8505.jpg"
+        src="items/Philips-70PUS8505.jpg"
         alt="philips-tv"
       />
       <img class="asus" src="/items/asus.jpg" alt="gtx 3080" />
       <img
         class="bose"
-        src="/items/Bose-QuietComfort-white.jpg"
+        src="items/Bose-QuietComfort-white.jpg"
         alt="BoseHeadphones"
       />
       <img
         class="sony"
-        src="/items/Sony-Alpha-A7-III.jpg"
+        src="items/Sony-Alpha-A7-III.jpg"
         alt="Sony-Alpha-A7-III"
       />
       <img
         class="huawei"
-        src="/items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
+        src="items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
         alt="Huawei MateBook"
       />
       <img class="logitech" src="items/logitechmxmaster.jpg" alt="mxmaster" />
-      <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
-      <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
+      <img class="ryzen" src="items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <img class="gopro" src="items/GoPro-HERO8-Black.jpg" alt="gopro" />
       <img
         class="fractal"
-        src="/items/Fractal-Design-MeshifyC.jpg"
+        src="items/Fractal-Design-MeshifyC.jpg"
         alt="fractacldesign"
       />
       <a
@@ -115,22 +115,22 @@
     <div class="mainbody2">
       <img
         class="philips-tv"
-        src="/items/Philips-70PUS8505.jpg"
+        src="items/Philips-70PUS8505.jpg"
         alt="philips-tv"
       />
-      <img class="asus" src="/items/asus.jpg" alt="gtx 3080" />
+      <img class="asus" src="items/asus.jpg" alt="gtx 3080" />
       <img
         class="sony"
-        src="/items/Sony-Alpha-A7-III.jpg"
+        src="items/Sony-Alpha-A7-III.jpg"
         alt="Sony-Alpha-A7-III"
       />
       <img
         class="huawei"
-        src="/items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
+        src="items/Huawei-MateBook-D-14-r5-8GB-512GB.jpg"
         alt="Huawei MateBook"
       />
-      <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
-      <img class="gopro" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
+      <img class="ryzen" src="items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <img class="gopro" src="items/GoPro-HERO8-Black.jpg" alt="gopro" />
       <a
         class="philips-text"
         href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
@@ -164,15 +164,15 @@
     <div class="mainbody3">
       <img
         class="philips-tv"
-        src="/items/Philips-70PUS8505.jpg"
+        src="items/Philips-70PUS8505.jpg"
         alt="philips-tv"
       />
       <img
         class="sony"
-        src="/items/Sony-Alpha-A7-III.jpg"
+        src="items/Sony-Alpha-A7-III.jpg"
         alt="Sony-Alpha-A7-III"
       />
-      <img class="ryzen" src="/items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
+      <img class="ryzen" src="items/AMD-Ryzen-9-5900X.jpg" alt="amdryzen" />
       <a
         class="philips-text"
         href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
