--- a/tvmediakamera.html
+++ b/tvmediakamera.html
@@ -47,15 +47,15 @@
       />
       <img
         class="bose2"
-        src="/items/Bose-QuietComfort-white.jpg"
+        src="items/Bose-QuietComfort-white.jpg"
         alt="BoseHeadphones"
       />
       <img
         class="sony2"
-        src="/items/Sony-Alpha-A7-III.jpg"
+        src="items/Sony-Alpha-A7-III.jpg"
         alt="Sony-Alpha-A7-III"
       />
-      <img class="gopro2" src="/items/GoPro-HERO8-Black.jpg" alt="gopro" />
+      <img class="gopro2" src="items/GoPro-HERO8-Black.jpg" alt="gopro" />
       <a
         class="philips-text2"
         href="https://cdon.se/hemelektronik/philips-70pus8505-70-klasse-8500-series-led-tv-smart-tv-android-tv-4k-uhd-2160p-3840-x-21-p54238360?utm_source=prisjakt&utm_medium=cpc&utm_term=Philips+70PUS8505+-+70%22+Klasse+8500+Series+LED+TV+-+Smart+TV+-+Android+TV+-+4K+UHD+(2160p)+3840+x+2160+-+HDR+-+lys+s%C3%B8lv&utm_content=54238360&utm_campaign=prisjakt_se_hemelektronik+%3E+tv+&+video+%3E+tv&f=0&tduid=f63bcf97b037fd2c489cb9b6d30739f0&affId=2097224"
