last picture done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         src="items/Philips-70PUS8505.jpg"
         alt="philips-tv"
       />
-      <img class="asus" src="/items/asus.jpg" alt="gtx 3080" />
+      <img class="asus" src="items/asus.jpg" alt="gtx 3080" />
       <img
         class="bose"
         src="items/Bose-QuietComfort-white.jpg"
